# GridSolver

./: .gitignore  CMakeLists.txt  ClassSolver.h  Factorial.c  GridGenerate.cpp  GridProblem.xlsx  Makefile  The Grid Problem.docx  UnUsed.cpp
CppDemo/: CMakeLists.txt  GridTest.py  SolverDemo.cpp
GridHTML/: Chart.min.js  grid.css  grid.html  grid.js
PyModule/: CMakeLists.txt  Makefile  SharedLib.cpp  cmake_install.cmake
SharedLib/: CMakeCache.txt  CMakeLists.txt  Makefile  SharedLib.cpp  Unused.cpp  cmake_install.cmake
UnitTest/: Data10x10_30.txt  Data10x10_30_5_5.txt  Data3x3_0.txt  Data3x3_45.txt  Data3x3_long.txt  Data3x3_short.txt  Data4x4.txt  Data4x4_0.txt  Data4x4_45.txt  Data4x4b.txt  Data4x4c.txt  Data4x4d.txt  Data5x5.txt  Data5x5b.txt  GridPlot.ipynb  GridTest.py  grid_invalid.txt  output.txt  test_grid.py
